--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,7 @@
 <html>
-<title>biography's - ACE12</title>
 <meta name=viewport content="width=device-width, initial-scale=1">
-<head><a href="index.html">go home</a><center><h2>biographys index</h2></center></head>
+<title>biography's - ACE12</title>
+<head><a href="index.html">go home</a><center><h2>biographys' index</h2></center></head>
 <body>
 <p>list of things we have so far.</p>
 <li><a href="alex.html">Alexander Terry</a>
