--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 <title>biography's - ACE12</title>
 <head><a href="index.html">go home</a><center><h2>biographys' index</h2></center></head>
 <body>
-<p>list of things we have so far.</p>
+<p>list of our current staff.</p>
 <li><a href="alex.html">Alexander Terry</a>
 <li><a href="jordan.html">jordan Ralston</a>
 </li>
