--- a/bio.html
+++ b/bio.html
@@ -1,12 +1,12 @@
 <html>
 <meta name=viewport content="width=device-width, initial-scale=1">
 <title>biography's - ACE12</title>
-<head><a href="index.html">go home</a><center><h2>biographys' index</h2></center></head>
+<head><a href="index.html">go home</a><center><h2>biography's index</h2></center></head>
 <body>
 <p>list of our current staff.</p>
 <li><a href="alex.html">Alexander Terry</a>
 <li><a href="jordan.html">jordan Ralston</a>
-</li>
+<li><a href="river.html">river(lAST NAME HERE)</a>
 </li>
 </body>
 <footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
