--- a/bio.html
+++ b/bio.html
@@ -6,7 +6,7 @@
 <p>list of our current staff.</p>
 <li><a href="alex.html">Alexander Terry</a>
 <li><a href="jordan.html">jordan Ralston</a>
-<li><a href="river.html">river(lAST NAME HERE)</a>
+<li><a href="river.html">river Parpana</a>
 </li>
 </body>
 <footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
