--- a/bio.html
+++ b/bio.html
@@ -1,23 +1,38 @@
 <html>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-47032953-1', 'mralext20.github.io');
-  ga('send', 'pageview');
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-47032953-1', 'mralext20.github.io');
+        ga('send', 'pageview');
+    </script>
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <title>biography's - ACE12</title>
+</head>
 
-</script>
-<meta name=viewport content="width=device-width, initial-scale=1">
-<title>biography's - ACE12</title>
-<head><a href="index.html">go home</a><center><h2>biography's index</h2></center></head>
-<body>
-<p>list of our current staff.</p>
-<li><a href="alex.html">Alexander Terry</a>
-<li><a href="jordan.html">jordan Ralston</a>
-<li><a href="river.html">river Parpana</a>
-</li>
+<body><a href="index.html">go home</a>
+    <center>
+        <h2>biography's index</h2>
+    </center>
+    <p>list of our current staff.</p>
+    <li><a href="alex.html">Alexander Terry</a>
+        <li><a href="jordan.html">jordan Ralston</a>
+            <li><a href="river.html">river Parpana</a>
+            </li>
 </body>
-<footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
+<footer>
+    <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+</footer>
+
 </html>
