add image to bio page

--- a/bio.html
+++ b/bio.html
@@ -24,6 +24,9 @@
 
 <body><a href="index.html">go home</a>
     <center>
+        <span style="text-align:center">
+        <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
+    </span>
         <h2>biography's index</h2>
     </center>
     <p>list of our current staff.</p>
