--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
     <title>biography's - ACE12</title>
 </head>
 
-<body><a href="index.html">go home</a>
+<body class="no_margin"><a href="index.html">go home</a>
     <center>
         <span style="text-align:center">
         <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
@@ -35,8 +35,15 @@
             <li><a href="river.html">river Parpana</a>
             </li>
 </body>
-<footer>
-    <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
-</footer>
+<table class="bottom widescreen" bgcolor="#06266f">
+    <tr>
+        <td class="align_left" style="padding:0px;">
+            <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+        </td>
+        <td class="align_right" style="padding:0px;">
+            <a href="terms_and_conditions.html">term and conditions</a>
+        </td>
+    </tr>
+</table>
 
 </html>
