--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,18 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+        .denk_one {
+            font-family:'Lustria', serif;
+        }
+        li span {
+  color: white;
+}
+        li {
+  color: white; 
+}
+    </style>
+    <!--google anylitics code-->
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -18,32 +30,117 @@
         ga('create', 'UA-47032953-1', 'mralext20.github.io');
         ga('send', 'pageview');
     </script>
-    <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>biography's - ACE12</title>
+    <!--resize everything to fit most screensizes-->
+    <meta name=viewport content="width=690, initial-scale=1">
+    <!--font external style sheet-->
+    <link href='http://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
+    <title>ACE12</title>
 </head>
 
-<body class="no_margin"><a href="index.html">go home</a>
-    <center>
-        <span style="text-align:center">
-        <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
+<body class="no_margin" style="margin-bottom: 50px;">
+
+
+    <table border="1" bgcolor="#040015" class="widescreen table_boarder">
+        <tr>
+            <td width="75%" bgcolor="#fff">
+                <img src="assets/ace12.jpg" style=" display: block;margin-left: auto;margin-right: auto;" alt="Click Links" height="150" width="325">
+            </td>
+            <td>
+                <table class="widescreen no_margin" border="0" style="background: linear-gradient(#01b5ea ,#000851);" cellpadding="10" height="159px" width="332px">
+                    <tr>
+                        <td>
+                            <!-- twitter button -->
+                            <a href="https://twitter.com/ace12usa" class="twitter-follow-button" style="text-indent:800px" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
+                            <script>
+                                ! function(d, s, id) {
+                                    var js, fjs = d.getElementsByTagName(s)[0];
+                                    if(!d.getElementById(id)) {
+                                        js = d.createElement(s);
+                                        js.id = id;
+                                        js.src = "//platform.twitter.com/widgets.js";
+                                        fjs.parentNode.insertBefore(js, fjs);
+                                    }
+                                }(document, "script", "twitter-wjs");
+                            </script>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!--facebook button-->
+                            <div id="fb-root"></div>
+                            <script>
+                                (function(d, s, id) {
+                                    var js, fjs = d.getElementsByTagName(s)[0];
+                                    if(d.getElementById(id)) return;
+                                    js = d.createElement(s);
+                                    js.id = id;
+                                    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+                                    fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));
+                            </script>
+                            <div class="fb-like" data-href="https://www.facebook.com/pages/Ace-12/307443606070772" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- +1 button-->
+                            <div class="g-plusone text_show" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
+                            <script type="text/javascript">
+                                (function() {
+                                    var po = document.createElement('script');
+                                    po.type = 'text/javascript';
+                                    po.async = true;
+                                    po.src = 'https://apis.google.com/js/platform.js';
+                                    var s = document.getElementsByTagName('script')[0];
+                                    s.parentNode.insertBefore(po, s);
+                                })();
+                            </script>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+    <table border="1" bgcolor="#001340" style="background: linear-gradient(#06266f, #001340);" class="widescreen table_boarder">
+        <tr>
+            <td width="20%" style="text-align:center;">
+                <a href="/">Home</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="news.html">News</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="gallery.html">Gallery</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="info.html">Info</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="bio.html">Bios</a>
+            </td>
+        </tr>
+    </table>
+      <span style=" display: block;margin-left: auto;margin-right: auto;">
+        <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
+            <tr>
+                <td>
+                    <font color="#ffffff">Biography's index</font>
+                </td>
+            </tr>
+            <td style="background: linear-gradient(#221e11 ,#000)" class="align_left">
+                <font color="#ffffff" size="6"><div align="center">Our current staff</div></font>
+                <br>
+                <ul>
+                    <li><span><a href="alex.html">Alexander Terry</a></span>
+        <li><span><a href="jordan.html">Jordan Ralston</a></span>
+            <li><span><a href="river.html">River Parpana</a></span>
+                <span class="text_show denk_one"></span>
+    </ul>
+                    </td>
+    </table>
     </span>
-        <h2>biography's index</h2>
-    </center>
-    <p>list of our current staff.</p>
-    <li><a href="alex.html">Alexander Terry</a>
-        <li><a href="jordan.html">jordan Ralston</a>
-            <li><a href="river.html">river Parpana</a>
-            </li>
+    
 </body>
-<table class="bottom widescreen" bgcolor="#06266f">
-    <tr>
-        <td class="align_left" style="padding:0px;">
-            <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
-        </td>
-        <td class="align_right" style="padding:0px;">
-            <a href="terms_and_conditions.html">term and conditions</a>
-        </td>
-    </tr>
-</table>
+
 
 </html>
