--- a/bio.html
+++ b/bio.html
@@ -8,11 +8,11 @@
             font-family:'Lustria', serif;
         }
         li span {
-  color: white;
-}
+            color: white;
+        }
         li {
-  color: white; 
-}
+            color: white;
+        }
     </style>
     <!--google anylitics code-->
     <script>
@@ -120,7 +120,7 @@
             </td>
         </tr>
     </table>
-      <span style=" display: block;margin-left: auto;margin-right: auto;">
+    <span style=" display: block;margin-left: auto;margin-right: auto;">
         <table class="half_screen table_boarder_v2 table_spaceing" border="1" bgcolor="#000000" style="left: 25%;margin:auto;">
             <tr>
                 <td>
@@ -132,15 +132,35 @@
                 <br>
                 <ul>
                     <li><span><a href="alex.html">Alexander Terry</a></span>
-        <li><span><a href="jordan.html">Jordan Ralston</a></span>
-            <li><span><a href="river.html">River Parpana</a></span>
-                <span class="text_show denk_one"></span>
-    </ul>
-                    </td>
-    </table>
-    </span>
-    
-</body>
+    <li><span><a href="jordan.html">Jordan Ralston</a></span>
+        <li><span><a href="river.html">River Parpana</a></span>
+            <span class="text_show denk_one"></span>
+            </ul>
+            </td>
+            </table>
+            </span>
+            <footer>
+                <table class="bottom widescreen" border="0" style="background:linear-gradient(rgba(0,0,0,0) ,#000000);height:39%;px;z-index:-1;">
+                    <tr>
+                        <td class="align_left" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
+                            <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+                        </td>
+                        <td class="align_right" style="padding:0px;vertical-align:bottom;padding-bottom:20px;">
+                            <a href="terms_and_conditions.html">disclaimers</a>
+                        </td>
+                    </tr>
+                </table>
+            </footer>
 
+</body>
+<!--[if lt IE 10]>
+<script>if(confirm("IE9 is not supported. upgrade your browser please. \ngoogle chrome is nice.\nif you dont like google chrome, try firefox.")) {
+window.location = "https://www.google.com/intl/en/chrome/browser/";
+}
+else {
+    window.location = "http://www.mozilla.org/en-US/firefox/new/";
+}    
+</script>
+<![endif]-->
 
 </html>
