--- a/bio.html
+++ b/bio.html
@@ -34,7 +34,7 @@
     <meta name=viewport content="width=690, initial-scale=1">
     <!--font external style sheet-->
     <link href='http://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
-    <title>ACE12</title>
+    <title>Bios - ACE12</title>
 </head>
 
 <body class="no_margin" style="margin-bottom: 50px;">
@@ -154,13 +154,13 @@
 
 </body>
 <!--[if lt IE 10]>
-<script>if(confirm("IE9 is not supported. upgrade your browser please. \ngoogle chrome is nice.\nif you dont like google chrome, try firefox.")) {
-window.location = "https://www.google.com/intl/en/chrome/browser/";
-}
-else {
-    window.location = "http://www.mozilla.org/en-US/firefox/new/";
-}    
-</script>
-<![endif]-->
+    <script>
+        if(confirm("IE9 is not supported. upgrade your browser please. \ngoogle chrome is nice.\nif you dont like google chrome, try firefox.")) {
+            window.location = "https://www.google.com/intl/en/chrome/browser/";
+        } else {
+            window.location = "http://www.mozilla.org/en-US/firefox/new/";
+        }
+    </script>
+    <![endif]-->
 
 </html>
