--- a/bio.html
+++ b/bio.html
@@ -135,19 +135,13 @@
                 <table>
                     <tr>
                     <ul>
-               <li type="circle"><span><b><font color="#ffffff">financial</font></b></span></li>
+               <li type="circle"><span><b><font color="#ffffff">programmers</font></b></span></li>
                 </ul> 
                     <tr>
                         <ul><li><span><a href="alex.html">Alexander Terry</a></span></li></ul>
                         </tr>
                         <tr>
         <ul><li><span><a href="jordan.html">Jordan Ralston</a></span></li></ul>
-                        </tr>
-                        <tr>
-        <ul><li><span><a href="river.html">River Parpana</a></span></li></ul>
-                        </tr>
-                        <tr>
-            <ul><li><span><a href="ian.html">Ian reddel</a></span></li></ul>
                         </tr>
             </table><br>
                    <table>
@@ -168,10 +162,46 @@
             <ul><li><span><a href="ian.html">Ian reddel</a></span></li></ul>
                         </tr>
                              <tr>
-            <ul><li><span><a href="joseph.html">Joseph Walker</a></span></li></ul>
+            <ul><li><span><a href="jo.html">Joseph Walker</a></span></li></ul>
                         </tr>
             </table>
-                
+                <br>
+                   <table>
+                    <tr>
+                    <ul>
+               <li type="circle"><span><b><font color="#ffffff">writers</font></b></span></li>
+                </ul> 
+                    <tr>
+                        <ul><li><span><a href="ezra.html">Elizabeth Mayfield</a></span></li></ul>
+                        </tr>
+                        <tr>
+        <ul><li><span><a href="jordan.html">Jordan Ralston</a></span></li></ul>
+                        </tr>
+                        <tr>
+            <ul><li><span><a href="ian.html">Ian reddel</a></span></li></ul>
+                        </tr>
+                       <tr>
+            <ul><li><span><a href="jo.html">Joseph Walker</a></span></li></ul>
+                        </tr>
+            </table>
+                   <table>
+                    <tr>
+                    <ul>
+               <li type="circle"><span><b><font color="#ffffff">CEO</font></b></span></li>
+                </ul> 
+                        <tr>
+        <ul><li><span><a href="jordan.html">Jordan Ralston</a></span></li></ul>
+                        </tr>
+            </table><br>
+                    <table>
+                    <tr>
+                    <ul>
+               <li type="circle"><span><b><font color="#ffffff">social media director</font></b></span></li>
+                </ul> 
+                        <tr>
+        <ul><li><span><a href="newmeat.html">employee needed</a></span></li></ul>
+                        </tr>
+            </table><br>
                 <span class="text_show denk_one"></span>
             </td>
             </table>
